<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/main_logo"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/login_to_the_soapranos"
        android:textColor="@color/blue_dark"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/create_account_btn"
        app:layout_constraintEnd_toEndOf="@+id/content_lb"
        app:layout_constraintStart_toStartOf="@+id/terms_lb" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/create_new_account"
        android:textColor="@color/blue_dark"
        app:cornerRadius="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/upper_lb"
        app:layout_constraintEnd_toEndOf="@+id/content_lb"
        app:layout_constraintStart_toStartOf="@+id/terms_lb" />

    <TextView
        android:id="@+id/upper_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/by_continuing_you_agree_to_our"
        android:textColor="@color/white_80"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/privacy_lb"
        app:layout_constraintEnd_toEndOf="@+id/content_lb"
        app:layout_constraintStart_toStartOf="@+id/terms_lb" />


    <TextView
        android:id="@+id/terms_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/terms_of_service"
        android:textColor="@color/white_80"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dash_lb"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/dash_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="-"
        android:textColor="@color/white_80"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/privacy_lb"
        app:layout_constraintStart_toEndOf="@+id/terms_lb" />

    <TextView
        android:id="@+id/privacy_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/privacy_policy"
        android:textColor="@color/white_80"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/second_dash_lb"
        app:layout_constraintStart_toEndOf="@+id/dash_lb" />

    <TextView
        android:id="@+id/second_dash_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="-"
        android:textColor="@color/white_80"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/content_lb"
        app:layout_constraintStart_toEndOf="@+id/privacy_lb" />

    <TextView
        android:id="@+id/content_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/content_policy"
        android:textColor="@color/white_80"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/second_dash_lb" />
</androidx.constraintlayout.widget.ConstraintLayout>